--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "typescript": "^4.1.2",
+    "firebase": "^8.6.8",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -40,9 +40,10 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
+    "@types/node-fetch": "^2.5.10",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
-    "@types/node-fetch": "^2.5.10",
-    "firebase": "^8.6.8"
+    "eslint": "^7.29.0",
+    "typescript": "^4.1.2"
   }
 }
