--- a/package.json
+++ b/package.json
@@ -43,7 +43,10 @@
     "@types/node-fetch": "^2.5.10",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
     "eslint": "^7.29.0",
+    "eslint-plugin-react": "^7.24.0",
     "typescript": "^4.1.2"
   }
 }
