--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^8.6.8",
     "node-fetch": "^2.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^3.0.4",
     "react-scripts": "4.0.3",
-    "firebase": "^8.6.8",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
